# nb-wrangler

./: .gitignore  AGENT.md  CHANGES.md  GEMINI.md  Makefile  PANTRY.md  README.gemni  README.md  TODO  fnc-test-spec.yaml  nb-curator  nb-wrangler  nb_curator.py  nbw-wrangler-spec.yaml  prototype-protocol.yaml  pyproject.toml  requirements.txt  roman-20-pre-alpha.yaml  tike-2025-07-beta.yaml  tracebacks
docs/: CHANGES.md  PANTRY.md  automated_image_pipeline.md  automated_image_pipeline.mmd  classic.flow  classic.mmd  curation.md  data-diagram-table.md  data-diagram.flow  data-diagram.mmd  data.md  future-dev-proposals.md  inject-spi.md  notebooks_and_environment.md  plan-b-ideas.md  plan-b-tasks.txt  plan-b.md  plan-b.reqs  plan-c.md  refdata_dependencies.md  refdata_dependencies.yaml  repo-pipeline-relationships.mmd  spec-format.md  submit.md  wrangle.flow  wrangle.mmd
nb_curator/: DataManager.py  __init__.py  __main__.py  cli.py  compiler.py  config.py  constants.py  curator.py  data_manager.py  environment.py  injector.py  logger.py  logging.py  nb_processor.py  notebook_tester.py  pantry.py  repository.py  spec_manager.py  utils.py
nb_wrangler/: __init__.py  __main__.py  cli.py  compiler.py  config.py  constants.py  data_manager.py  data_wrangler.py  environment.py  injector.py  kernel.py  logger.py  nb-wrangler  nb_processor.py  nbw.py  notebook_tester.py  pantry.py  registry.py  repository.py  rmpkgs  rmpkgs.py  spec_generator.py  spec_manager.py  spec_validator.py  utils.py  wrangler.py  yaml_typed_values.py
prod-specs/: rges-nexus-notebooks.yaml  (+2 more)
(+64 files in other folders)
